<resources>
    <string name="app_name">Products List</string>
    <string name="add_a_product">Add a product</string>
    <string name="click_to_add_image">Click to add image</string>
    <string name="carregar">Carregar</string>
    <string name="nome">Nome</string>
    <string name="descri_o">Descrição</string>
    <string name="valor">Valor</string>
    <string name="salvar">Salvar</string>
    <string name="image">Image</string>
    <string name="url">URL</string>
    <string name="product_images">product images</string>
    <string name="editar">Editar</string>
    <string name="remover">Remover</string>
    <string name="escolha_uma_op_o">Escolha uma opção</string>
    <string name="galeria">Galeria</string>
    <string name="c_mera">Câmera</string>
    <string name="upload">Upload</string>
    <string name="usu_rio">Usuário</string>
    <string name="senha">Senha</string>
    <string name="entrar">ENTRAR</string>
    <string name="cadastrar_usu_rio">CADASTRAR USUÁRIO</string>
    <string name="nome3">Nome</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="logout">Logout</string>
    <string name="logout2">Logout</string>
    <string name="perfil">Perfil</string>
</resources>