<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddProductActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/add_product_ivProduct"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/click_to_add_image"
            android:src="@drawable/imagem_padrao"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_product_btnLoadImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carregar"
            app:icon="@drawable/ic_baseline_refresh"
            app:layout_constraintTop_toBottomOf="@id/add_product_ivProduct"
            app:layout_constraintBottom_toBottomOf="@id/add_product_ivProduct"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_product_tilProductName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="16dp"
            android:hint="@string/nome"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/add_product_btnLoadImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_product_etProductName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_product_tilProductDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/descri_o"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/add_product_tilProductName"
            app:layout_constraintStart_toStartOf="@id/add_product_tilProductName"
            app:layout_constraintEnd_toEndOf="@id/add_product_tilProductName" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_product_etProductDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/add_product_tilProductPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/valor"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:layout_constraintTop_toBottomOf="@id/add_product_tilProductDescription"
            app:layout_constraintStart_toStartOf="@id/add_product_tilProductDescription"
            app:layout_constraintEnd_toEndOf="@id/add_product_tilProductDescription" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_product_etProductPrice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_product_btnSaveProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginHorizontal="24dp"
            android:text="@string/salvar"
            app:layout_constraintTop_toBottomOf="@id/add_product_tilProductPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>